# mission-tradespace-explorer

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  campaigns.md  config_reference.md  distributions.md  examples.md  methodology.md  metrics.md  mission_model.md  mission_models.md  optimization.md  pareto_and_design_selection.md  reliability.md  reproducibility.md  sampling_methods.md  sensitivity.md  sensitivity_methods.md  surrogate_models.md  uncertainty_quantification.md
examples/campaigns/: resume_campaign.json
examples/configs/: comm_link_budget_trade.json  empirical_wind_table.json  failure_mode_stress_test.json  guidance_gain_optimization.json  guidance_gain_sweep.json  high_wind_robustness.json  mission_mc.json  pareto_design_exploration.json  qbar_constrained_design.json  reliability_report_example.json  rocket_ascent_screening.json  rover_energy_mission.json  sensor_bias_sensitivity.json  thrust_mass_trade.json  uav_endurance_trade.json
examples/data/: wind_cases.csv
outputs/: generated_template_uav.json
outputs/campaign_candidate/: campaign_rollup.json  campaign_status.json  campaign_summary.csv
outputs/campaign_compare/: campaign_comparison.csv  campaign_comparison.json
outputs/demo/: report.html  results.csv  (+3 more)
tests/: test_tradespace.py
tradespace/: __init__.py  audit.py  campaign.py  cli.py  config.py  config_tools.py  deep_sensitivity.py  distributions.py  mission.py  mission_models.py  optimization.py  pareto.py  reliability.py  reports.py  runner.py  samplers.py  sensitivity.py  storage.py  surrogate.py  sweep.py  uq.py
(+102 files in other folders)
