[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tradespace"
version = "0.1.0"
description = "Monte Carlo mission performance and trade-space exploration toolkit."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Avi Patel" }]
dependencies = ["numpy>=1.24"]

[project.scripts]
tradespace = "tradespace.cli:main"
